# rs-httpbin

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  openapi.json  rustfmt.toml
.github/workflows/: ci.yaml
assets/: forms_post.html  sample.html  sample.xml  socketio-chat.html  utf8.html  ws-chat.html
axum_garde/: .cargo_vcs_info.json  Cargo.toml
axum_garde/examples/: custom_validation.rs  json.rs
axum_garde/src/: error.rs  into_inner.rs  with_validation.rs
examples/: time_1.rs
src/: axum_client_ip.rs  data.rs  main.rs  socket_io_chat.rs  swagger_ui.rs  tests.rs  valid.rs  ws.rs  ws_chat.rs  ws_echo.rs
src/handlers/: auth.rs  mod.rs  redirect.rs
src/tests/: ext.rs  mod.rs  test_bytes.rs  test_digest_auth.rs  test_ws.rs
