[package]
name = "rs-httpbin"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
axum = { version = "0.8.6", default-features = false, features = [
  "http1",
  "http2",
  "json",
  "macros",
  "matched-path",
  "tower-log",
  "ws",
  "query"
] }
axum-extra = { version = "0.12", features = [
  "cookie",
  "erased-json",
  "query",
  "typed-header",
] }

base64 = "0.22.1"
client-ip = "0.1.1"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
either = "1.15.0"
fastrand = "2.3.0"
form_urlencoded = "1.2.2"
futures-util = "0.3.31"
garde = { version = "0.22", features = ["derive"] }
indoc = "2.0.6"
jiff = { version = "0.2.15", default-features = false, features = [
  "serde",
  "std",
] }
markdown = "1"
md5 = "0.8.0"
mime = "0.3.17"
minijinja = "2.12.0"
multer = "3.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
  "compression-full",
  "cors",
  "decompression-full",
  "request-id",
  "set-header",
  "trace",
  "util",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "env-filter",
  "fmt",
  "json",
] }
uuid = { version = "~1.19", default-features = false, features = [
  "v4",
] }
whoami = { version = "2", default-features = false }

[dev-dependencies]
http-body-util = "0.1.3"
hyper-util = { version = "0.1.17", features = ["client-legacy"] }
test-case = "3.3.1"
tokio-tungstenite = "~0.28"

[features]
default = []

[profile.release]
opt-level = "s"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1  # Reduce the number of codegen units to improve optimization.
