[package]
edition = "2021"
rust-version = "1.85"
name = "axum_garde"
version = "0.21.0"
build = false
autobins = false
autotests = true
autobenches = false
description = "Deprecated in favor of axum-valid"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jprochazk/garde"

[lib]
name = "axum_garde"
path = "src/lib.rs"

[[example]]
name = "custom_validation"
path = "examples/custom_validation.rs"
required-features = ["json"]

[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["json"]


[dependencies]
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.10", optional = true, default-features = false }
garde = { version = "0.22.0", default-features = false }
thiserror = { version = "2", default-features = false }



[features]
# axum-extra-protobuf = ["axum-extra/protobuf"]
axum-extra-query = ["axum-extra/query"]
default = ["json", "query", "form"]
form = ["axum/form"]
json = ["axum/json"]
query = ["axum/query"]

[dev-dependencies]
serde = "1"
tokio = "1"

